--- a/codigos/aula6.Rmd
+++ b/codigos/aula6.Rmd
@@ -28,6 +28,8 @@ temperatures <- read_csv("https://wilkelab.org/SDS375/datasets/tempnormals.csv")
   ) %>%
   select(location, day_of_year, month, temperature)
 
+US_census <- read_csv("https://wilkelab.org/SDS375/datasets/US_census.csv")
+
 tx_counties <- US_census %>% 
   filter(state == "Texas") %>%
   select(name, pop2010) %>%
